--- a/favorite.html
+++ b/favorite.html
@@ -173,217 +173,224 @@
     <span class="mr-[16px] text-[#6E6E6E] text-[16px]">Сортировать</span>
     <select class="bg-[#F4F4F4] border-[none] border-0 
     cursor-pointer focus:outline-none focus:border-0">
-        <option value="1">Хиты продаж</option>
-        <option value="2">Хиты продаж 2</option>
-        <option value="3">Хиты продаж 3</option>
+      <option value="1">Хиты продаж</option>
+      <option value="2">Хиты продаж 2</option>
+      <option value="3">Хиты продаж 3</option>
     </select>
     <span class="mr-[16px] ml-[24px] inline-block text-[#6E6E6E] text-[16px]">Показывать</span>
     <div class="flex">
-        <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] border 
+      <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] border
         border-[rgba(110,110,110,0.25)]">Акции</a>
-        <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] border
+      <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] border
          border-[rgba(110,110,110,0.25)]">Новинки</a>
-        <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E] 
+      <a href="#" class="py-[10px] rounded-[40px] px-[16px] mr-[4px] text-[#6E6E6E]
         border border-[rgba(110,110,110,0.25)]">Хиты</a>
     </div>
   </div>
 
   <div class="grid grid-cols-5 gap-[20px]">
     <div class="w-full">
-        <div class="w-full h-[427px] border rounded-[16px] relative">
-          <div class="absolute top-2 right-2 flex-je-c gap-2">
-            <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
-              <img src="img/icons/heard-gray.svg" alt="heard-gray">
-            </div>
-            <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
-              <img src="img/icons/rating-gray.svg" alt="rating-gray">
-            </div>
+      <div class="w-full h-[427px] border rounded-[16px] relative">
+        <div class="absolute top-2 right-2 flex-je-c gap-2">
+          <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+            <img src="img/icons/heard-gray.svg" alt="heard-gray">
           </div>
-
-          <div class="swiper swiperProductItems h-full relative">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide px-6 flex-jc-c">
-                <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-              </div>
-              <div class="swiper-slide px-6 flex-jc-c">
-                <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-              </div>
-              <div class="swiper-slide px-6 flex-jc-c">
-                <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-              </div>
-            </div>
-            <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
+          <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+            <img src="img/icons/rating-gray.svg" alt="rating-gray">
           </div>
-
-
         </div>
-        <div class="w-full p-4">
-          <div class="flex-jsb-c">
-            <div class="flex-js-c text-[#6E6E6E] gap-[5px]">
-              <img src="img/icons/star-yellow.svg" alt="star-yellow">
-              4.2
-              <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
-              29 отзывов
+
+        <div class="swiper swiperProductItems h-full relative">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide px-6 flex-jc-c">
+              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
             </div>
-            <span class="text-[#6E6E6E]">арт. 234 345</span>
+            <div class="swiper-slide px-6 flex-jc-c">
+              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
+            </div>
+            <div class="swiper-slide px-6 flex-jc-c">
+              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
+            </div>
           </div>
-
-          <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h3>
-
-
-          <div class="flex-js-c gap-2 text-[#707070]">
-            Производитель
-            <span class="text-[#323232] font-bold">Daiwa</span>
-          </div>
-
-
-          <div class="flex-js-c gap-1 mt-2">
-            <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-            <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
-          </div>
-
-
-          <div class="flex-jsb-c mt-2">
-            <h4 class="text-[24px] font-semibold">3 200 ₽</h4>
-            <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
-              В корзину
-              <img src="img/icons/basket-white.svg" alt="">
-            </button>
-          </div>
-
-
+          <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
         </div>
+
+
       </div>
-      <div class="w-full">
-        <div class="w-full h-[427px] border rounded-[16px] relative">
-          <div class="absolute top-2 right-2 flex-je-c gap-2">
-            <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
-              <img src="img/icons/heard-gray.svg" alt="heard-gray">
-            </div>
-            <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
-              <img src="img/icons/rating-gray.svg" alt="rating-gray">
-            </div>
+      <div class="w-full p-4">
+        <div class="flex-jsb-c">
+          <div class="flex-js-c text-[#6E6E6E] gap-[5px]">
+            <img src="img/icons/star-yellow.svg" alt="star-yellow">
+            4.2
+            <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
+            29 отзывов
           </div>
-
-          <div class="swiper swiperProductItems h-full relative">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide px-6 flex-jc-c">
-                <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-              </div>
-              <div class="swiper-slide px-6 flex-jc-c">
-                <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-              </div>
-              <div class="swiper-slide px-6 flex-jc-c">
-                <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-              </div>
-            </div>
-            <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
-          </div>
-
-
+          <span class="text-[#6E6E6E]">арт. 234 345</span>
         </div>
-        <div class="w-full p-4">
-          <div class="flex-jsb-c">
-            <div class="flex-js-c text-[#6E6E6E] gap-[5px]">
-              <img src="img/icons/star-yellow.svg" alt="star-yellow">
-              4.2
-              <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
-              29 отзывов
-            </div>
-            <span class="text-[#6E6E6E]">арт. 234 345</span>
-          </div>
 
-          <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h3>
+        <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa Ninja X SF
+          245 см тест 15-50 гр</h3>
 
 
-          <div class="flex-js-c gap-2 text-[#707070]">
-            Производитель
-            <span class="text-[#323232] font-bold">Daiwa</span>
-          </div>
-
-
-          <div class="flex-js-c gap-1 mt-2">
-            <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-            <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
-          </div>
-
-
-          <div class="flex-jsb-c mt-2">
-            <h4 class="text-[24px] font-semibold">3 200 ₽</h4>
-            <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
-              В корзину
-              <img src="img/icons/basket-white.svg" alt="">
-            </button>
-          </div>
-
-
+        <div class="flex-js-c gap-2 text-[#707070]">
+          Производитель
+          <span class="text-[#323232] font-bold">Daiwa</span>
         </div>
+
+
+        <div class="flex-js-c gap-1 mt-2">
+          <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
+          <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+        </div>
+
+
+        <div class="flex-jsb-c mt-2">
+          <h4 class="text-[24px] font-semibold">3 200 ₽</h4>
+          <button
+              class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
+            В корзину
+            <img src="img/icons/basket-white.svg" alt="">
+          </button>
+        </div>
+
+
       </div>
-      <div class="w-full">
-        <div class="w-full h-[427px] border rounded-[16px] relative">
-          <div class="absolute top-2 right-2 flex-je-c gap-2">
-            <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
-              <img src="img/icons/heard-gray.svg" alt="heard-gray">
-            </div>
-            <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
-              <img src="img/icons/rating-gray.svg" alt="rating-gray">
-            </div>
+    </div>
+    <div class="w-full">
+      <div class="w-full h-[427px] border rounded-[16px] relative">
+        <div class="absolute top-2 right-2 flex-je-c gap-2">
+          <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+            <img src="img/icons/heard-gray.svg" alt="heard-gray">
           </div>
-
-          <div class="swiper swiperProductItems h-full relative">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide px-6 flex-jc-c">
-                <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-              </div>
-              <div class="swiper-slide px-6 flex-jc-c">
-                <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-              </div>
-              <div class="swiper-slide px-6 flex-jc-c">
-                <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
-              </div>
-            </div>
-            <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
+          <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+            <img src="img/icons/rating-gray.svg" alt="rating-gray">
           </div>
-
-
         </div>
-        <div class="w-full p-4">
-          <div class="flex-jsb-c">
-            <div class="flex-js-c text-[#6E6E6E] gap-[5px]">
-              <img src="img/icons/star-yellow.svg" alt="star-yellow">
-              4.2
-              <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
-              29 отзывов
+
+        <div class="swiper swiperProductItems h-full relative">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide px-6 flex-jc-c">
+              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
             </div>
-            <span class="text-[#6E6E6E]">арт. 234 345</span>
+            <div class="swiper-slide px-6 flex-jc-c">
+              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
+            </div>
+            <div class="swiper-slide px-6 flex-jc-c">
+              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
+            </div>
           </div>
-
-          <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa Ninja X SF 245 см тест 15-50 гр</h3>
-
-
-          <div class="flex-js-c gap-2 text-[#707070]">
-            Производитель
-            <span class="text-[#323232] font-bold">Daiwa</span>
-          </div>
-
-
-          <div class="flex-js-c gap-1 mt-2">
-            <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-            <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
-          </div>
-
-
-          <div class="flex-jsb-c mt-2">
-            <h4 class="text-[24px] font-semibold">3 200 ₽</h4>
-            <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
-              В корзину
-              <img src="img/icons/basket-white.svg" alt="">
-            </button>
-          </div>
-
-
+          <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
         </div>
+
+
       </div>
+      <div class="w-full p-4">
+        <div class="flex-jsb-c">
+          <div class="flex-js-c text-[#6E6E6E] gap-[5px]">
+            <img src="img/icons/star-yellow.svg" alt="star-yellow">
+            4.2
+            <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
+            29 отзывов
+          </div>
+          <span class="text-[#6E6E6E]">арт. 234 345</span>
+        </div>
+
+        <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa Ninja X SF
+          245 см тест 15-50 гр</h3>
+
+
+        <div class="flex-js-c gap-2 text-[#707070]">
+          Производитель
+          <span class="text-[#323232] font-bold">Daiwa</span>
+        </div>
+
+
+        <div class="flex-js-c gap-1 mt-2">
+          <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
+          <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+        </div>
+
+
+        <div class="flex-jsb-c mt-2">
+          <h4 class="text-[24px] font-semibold">3 200 ₽</h4>
+          <button
+              class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
+            В корзину
+            <img src="img/icons/basket-white.svg" alt="">
+          </button>
+        </div>
+
+
+      </div>
+    </div>
+    <div class="w-full">
+      <div class="w-full h-[427px] border rounded-[16px] relative">
+        <div class="absolute top-2 right-2 flex-je-c gap-2">
+          <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+            <img src="img/icons/heard-gray.svg" alt="heard-gray">
+          </div>
+          <div class="w-[40px] h-[32px] flex-jc-c bg-black/10 rounded-[8px]">
+            <img src="img/icons/rating-gray.svg" alt="rating-gray">
+          </div>
+        </div>
+
+        <div class="swiper swiperProductItems h-full relative">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide px-6 flex-jc-c">
+              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
+            </div>
+            <div class="swiper-slide px-6 flex-jc-c">
+              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
+            </div>
+            <div class="swiper-slide px-6 flex-jc-c">
+              <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
+            </div>
+          </div>
+          <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
+        </div>
+
+
+      </div>
+      <div class="w-full p-4">
+        <div class="flex-jsb-c">
+          <div class="flex-js-c text-[#6E6E6E] gap-[5px]">
+            <img src="img/icons/star-yellow.svg" alt="star-yellow">
+            4.2
+            <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
+            29 отзывов
+          </div>
+          <span class="text-[#6E6E6E]">арт. 234 345</span>
+        </div>
+
+        <h3 class="text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] h-[72px]">Спиннинг Daiwa Ninja X SF
+          245 см тест 15-50 гр</h3>
+
+
+        <div class="flex-js-c gap-2 text-[#707070]">
+          Производитель
+          <span class="text-[#323232] font-bold">Daiwa</span>
+        </div>
+
+
+        <div class="flex-js-c gap-1 mt-2">
+          <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
+          <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбек</span>
+        </div>
+
+
+        <div class="flex-jsb-c mt-2">
+          <h4 class="text-[24px] font-semibold">3 200 ₽</h4>
+          <button
+              class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
+            В корзину
+            <img src="img/icons/basket-white.svg" alt="">
+          </button>
+        </div>
+
+
+      </div>
+    </div>
+
   </div>
 </div>
 
