--- a/services.html
+++ b/services.html
@@ -170,26 +170,34 @@
     </li>
   </ul>
 
-  <h2 class="font-medium text-[#212121] text-[32px] mb-[30px]">Как мы проверяем оригинальность товара?</h2>
+  <h2 class="font-medium text-[#212121] text-[32px] leading-[100%] mb-[30px] max-[767px]:text-[24px]">Как мы проверяем оригинальность товара?</h2>
 
-  <div class="flex">
-    <div class="rounded-[12px] bg-[#F4F4F4] px-[32px] py-[24px] flex items-center mr-[30px] max-w-[440px]">
-        <img src="img/serices-icon1.svg" alt="" class="mr-[10px]">
+  <div class="flex max-[1300px]:flex-col">
+    <div class="rounded-[12px] max-[1300px]:mr-[0] max-[1300px]:max-w-[100%] max-[767px]:py-[20px] 
+     max-[767px]:items-start max-[767px]:flex-col
+    max-[1300px]:mb-[12px] bg-[#F4F4F4] px-[32px] py-[24px] max-[767px]:p-[20px] flex items-center mr-[30px]
+     max-w-[440px]">
+        <img src="img/serices-icon1.svg" alt="" class="mr-[10px] max-[767px]:mb-[12px]">
         <div class="">
             <b class="text-[16px] font-bold text-[#323232] my-[4px] block">Сотрудничаем с брендами напрямую</b>
             <span class="text-[16px] font-normal text-[#323232]">И привлекаем только сертифицированных продавцов</span>
         </div>
     </div>
-    <div class="rounded-[12px] bg-[#F4F4F4] px-[32px] py-[24px] flex items-center mr-[30px] max-w-[440px]">
-        <img src="img/serices-icon2.svg" alt="" class="mr-[10px]">
+    <div class="rounded-[12px] max-[1300px]:mr-[0] max-[1300px]:max-w-[100%]  
+     max-[767px]:items-start max-[767px]:flex-col
+    max-[1300px]:mb-[12px] bg-[#F4F4F4] px-[32px] py-[24px] max-[767px]:p-[20px] flex items-center mr-[30px] max-w-[440px]">
+        <img src="img/serices-icon2.svg" alt="" class="mr-[10px] max-[767px]:mb-[12px]">
         <div class="">
             <b class="text-[16px] font-bold text-[#323232] my-[4px] block">Тщательно проверяем товары</b>
             <span class="text-[16px] font-normal text-[#323232]">Документы, бирки, этикетки, комплектацию — всё, 
                 чтобы вы получили оригинальный товар</span>
         </div>
     </div>
-    <div class="rounded-[12px] bg-[#F4F4F4] px-[32px] py-[24px] flex items-center mr-[30px] max-w-[440px]">
-        <img src="img/serices-icon3.svg" alt="" class="mr-[10px]">
+    <div class="rounded-[12px] max-[1300px]:mr-[0] max-[1300px]:max-w-[100%] max-[767px]:py-[20px]
+     max-[767px]:px-[16px] max-[767px]:items-start max-[767px]:flex-col 
+    max-[1300px]:mb-[12px] bg-[#F4F4F4] px-[32px] py-[24px] flex items-center mr-[30px] max-w-[440px]
+    ">
+        <img src="img/serices-icon3.svg" alt="" class="mr-[10px] max-[767px]:mb-[12px]">
         <div class="">
             <b class="text-[16px] font-bold text-[#323232] my-[4px] block">Контролируем каждую отправку</b>
             <span class="text-[16px] font-normal text-[#323232]">Проверяем упаковку и внешний вид товара со склада</span>
@@ -197,9 +205,11 @@
     </div>
   </div>
 
-  <h3 class="font-medium text-[#323232] text-[24px] mb-[24px] mt-[60px]">Мы являемся официальными партнерами брендов </h3>
+  <h3 class="font-medium leading-[110%] text-[#323232] text-[24px] mb-[24px] mt-[60px]
+  max-[1024px]:text-[20px] max-[1024px]:mt-[30px]">Мы являемся официальными партнерами брендов </h3>
 
-  <div class="grid grid-cols-7 gap-[30px]">
+  <div class="grid grid-cols-7 gap-[30px] max-[1300px]:grid-cols-5 
+  max-[767px]:grid-cols-2 max-[1024px]:grid-cols-4 max-[1024px]:gap-[12px]">
     <div class="px-[24px] py-[24px] flex h-[155px] rounded-[16px] border border-[rgba(110,110,110,0.25)]">
         <img src="img/brand-img1.png" alt="" class="m-[auto] max-w-[100%] max-h-[100%]">
     </div>
